# smoke_mcu

./: CMakeLists.txt  README.md  run.sh
include/: analyze.h  command.h  data.h  io.h  test.h  utils.h
src/: analyze.c  command.c  data.c  io.c  main.c  test.c  utils.c
